[package]
name = "cwjh_wasm"
version = "0.0.7"
edition = "2021"
description = "A set of rust utils"
repository = "https://github.com/klos71/cwjh_wasm_tools.git"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
"wasm-bindgen" = "0.2.83"

[dev-dependencies]
wasm-bindgen-test = "0.3.0"
